traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:7: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^Snake:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:14: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^Snake:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:18: warning: enclosing method fonctionTest has result type Unit: return value discarded
      return false
      ^Snake:22: error: value unary_! is not a member of Unit
  while (!fonctionTest()) {
         ^